tests/sksl/errors/golden/GrNoFragmentProcessorLocals.cpp
### Compilation failed:

error: 2: variables of type 'fragmentProcessor' must be global
1 error
